--- a/src/Components/Item.css
+++ b/src/Components/Item.css
@@ -7,6 +7,12 @@
     border: 1px solid #e1e1e1;
     border-radius: 10px;
 }
+.CardItemDet{
+    width: 80vw;  
+    background-color: rgb(174, 241, 147);
+    border: 1px solid #1ef3b3;
+    border-radius: 15px;
+}
 
 .ContainerItem {
     display: flex;
@@ -25,6 +31,13 @@
     display: flex;
     /* flex-direction: column; */
     justify-content: space-around;
+}
+.InfoDet{
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .Button {
@@ -51,6 +64,13 @@
 .ItemImg {
     width: 100px;
     height: 100px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.ItemImgDet{
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     object-position: center;
 }
