--- a/src/Components/cart/cart.css
+++ b/src/Components/cart/cart.css
@@ -8,3 +8,13 @@
     border-radius: 50px;
     text-align: center;
 }
+
+.btnVaciar{
+    text-align: center;
+    font-size: 18px;
+    background-color: crimson;
+    color: white;
+}
+tfoot{
+    width: 100%;
+}
